# ILInterpreter

./: .gitmodules  CMakeLists.txt
include/: context.hpp  dll.hpp  file_headers.hpp  logger.hpp  method.hpp  method_state.hpp  native.hpp  opcode.hpp  tables.hpp  types.hpp
rewrite/: CMakeLists.txt
rewrite/include/ili/: data_structures.hpp  executable_file.hpp  opcodes.hpp  runtime.hpp  tables.hpp  types.hpp  utils.hpp
rewrite/source/: data_structures.cpp  executable_file.cpp  execution.cpp  main.cpp  runtime.cpp
source/: dll.cpp  logger.cpp  main.cpp  method.cpp  native.cpp
test/example/: .gitignore  Program.cs  example.csproj
